# MAFAExtractor

./: LICENSE  README.md  pyproject.toml  requirements.txt
mafaextractor/: __init__.py  constants.py  extractor.py
tests/: test_mafaextractor.py
